--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,132 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+/* GENERAL */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+margin:0;
+padding: 0;
 }
-header {
-    background-color: #343a40;
-    color: #fff;
+body{
+    font-family: "poppins",sans-serif;
 }
-.nav-link {
-    margin-right: 10px;
+html{
+    scroll-behavior: smooth;
 }
-section {
-    padding: 2rem 0;
+p{color:rgb(85, 85, 85);
 }
-footer {
-    background-color: #343a40;
-    color: #fff;
-    padding: 1rem 0;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+/* TRANSITION*/
+a, .btn{
+    transition:  300ms ease;
 }
-.card-deck .card {
-    margin-bottom: 20px;
+
+/* DESKTOP NAV */
+nav,
+.nav-links{
+display:flex;
 }
-.social-links a {
-    margin: 0 10px;
-    color: #343a40;
-    text-decoration: none;
+nav{
+justify-content: space-around;
+align-items: center;
+height:17vh;
+
 }
-.social-links a:hover {
+.nav-links{
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
+
+}
+a{
+    color:black;
+    text-decoration: None;
+    text-decoration-color: white;
+
+}
+a:hover{
+    color: grey;
     text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: rgb(181, 181, 181);
+}
+.logo{
+    font-size: 2rem;
+}
+.logo:hover{
+    cursor:default;
+}
+/* HAMBURGER MENU */
+#hamburger-nav{
+    display: none;
+
+}
+.hamburger-menu{
+    position: relative;
+    display: inline-block;
+
+}
+.hamburger-icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+}
+.hamburger-icon span{
+    width: 100%;
+    height:2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+    
+}
+.menu-links{
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    width:fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+}
+.menu-links a{
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+
+}
+.menu-links li{
+    list-style: none;
+
+
+}
+.menu-links.open {
+    max-height: 300px;
+
+}
+.hamburger-icon.open span:first-child{
+    transform: rotate(45deg) translate(10px,5px);
+    
+}
+.hamburger-icon.open span:nth-child(2){
+    opacity: 0;
+
+}
+.hamburger-icon.open span:last-child{
+    transform: rotate(-45deg) translate(10px,-5px);
+
+
+}
+.hamburger-icon span:first-child{
+    transform: none;
+}
+.hamburger-icon span:first-child{
+    opacity: 1;
+}
+.hamburger-icon span:first-child{
+    transform: none;
 }
